--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -14,15 +14,11 @@
 
     <div class="flag">
         <div class="flag__figure">
-            {% if ldapUser %}
-                <img src="{{ ishttpsOn ? 'https' : 'http' }}://rockworldapps/badgephotos/{{ ldapUser.commonId }}.jpg" width="100">
-            {% else %}
-                <img src="/img/noprofile.jpg" width="100">
-            {% endif %}
+            <img src="{{ getAvatarLink(user.Email) }}">
         </div>
         <div class="flag__body">
 
-            <h1 class="mbs">
+            <h1 class="mbn">
                 {% if isSeriousBusinessMode() %}
                     {{ displayName }}
                 {% else %}
@@ -30,10 +26,10 @@
                 {% endif %}
             </h1>
             {% if ldapUser %}
-                <h4>{{ ldapUser.title }}</h4>
+                <h4 class="mtn">{{ ldapUser.title }}</h4>
                 <p>{{ ldapUser.teamName }}</p>
             {% else %}
-                <h4>Astronaut</h4>
+                <h4 class="mtn">Astronaut</h4>
                 <p>Discovery One</p>
             {% endif %}
         </div>
@@ -41,20 +37,32 @@
 
     <h2 class="leader">Contact</h2>
     <div class="details-box">
-        <dl class="split mbn">
-            <dt class="split__title">Email</dt>
-            <dd><a href="mailto:{{ user.Email }}">{{ user.Email }}</a></dd>
-
+        <ul class="list--bare mbn">
+            <li>
+                <span class="split__title">Email</span>
+                <a href="mailto:{{ user.Email }}">{{ user.Email }}</a>
+            </li>
             {% if ldapUser %}
-                <dt class="split__title">Phone</dt>
-                <dd>{{ ldapUser.workPhone }} (x{{ ldapUser.workExt }})</dd>
+                <li>
+                    <span class="split__title">Phone</span>
+                    {{ ldapUser.workPhone }} (x{{ ldapUser.workExt }})
+                </li>
 
-                <dt class="split__title">Mobile</dt>
-                <dd>{{ ldapUser.mobilePhone }}</dd>
+                <li>
+                    <span class="split__title">Mobile</span>
+                    {{ ldapUser.mobilePhone }}
+                </li>
 
-                <dt class="split__title">QUniverse Profile</dt>
-                <dd><a href="http://quniverse/profiles/Person.aspx?accountname=MI%5c{{ user.handle }}">Rockword Profile</a></dd>
+                <li>
+                    <span class="split__title">QUniverse Profile</span>
+                    <a href="http://quniverse/profiles/Person.aspx?accountname=MI%5c{{ user.handle }}">QUniverse Profile</a>
+                </li>
             {% endif %}
+
+            <li>
+                <span class="split__title">GitHub Profile</span>
+                <a href="http://git/{{ user.handle }}">http://git/{{ user.handle }}</a> {{ macros.icon('github') }}
+            </li>
         </dl>
     </div>
 
@@ -69,9 +77,6 @@
 
             <dt class="split__title">Total Pushes</dt>
             <dd>{{ pushes }}</dd>
-
-            <dt class="split__title">GitHub Profile</dt>
-            <dd><a href="http://git/{{ user.handle }}">http://git/{{ user.handle }}</a> {{ macros.icon('github') }}</dd>
         </dl>
     </div>
 
