--- a/templates/admin/credentials/credential.twig
+++ b/templates/admin/credentials/credential.twig
@@ -2,7 +2,7 @@
 
 {% set page_title = 'Credential : ' ~ credential.name %}
 
-{% set isSuper = isUserSuper(currentUser) %}
+{% set isSuper = isUserSuper(getCurrentUser()) %}
 
 {% block content %}
     <h1>Credentials - <strong>{{ credential.name }}</strong></h1>
