--- a/templates/admin/credentials/credentials.twig
+++ b/templates/admin/credentials/credentials.twig
@@ -2,7 +2,7 @@
 
 {% set page_title = "Credentials" %}
 
-{% set isSuper = isUserSuper(currentUser) %}
+{% set isSuper = isUserSuper(getCurrentUser()) %}
 
 {% block content %}
     <h1>{{ page_title }}</h1>
