--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -3,6 +3,7 @@
 {% set js_components = ["queue"] %}
 
 {% set page_title = 'Dashboard' %}
+{% set currentUser = getCurrentUser() %}
 
 {% block content %}
 
