--- a/templates/_partial-job/build-table.twig
+++ b/templates/_partial-job/build-table.twig
@@ -38,7 +38,7 @@
             {% set canPushNow = false %}
 
             {% if isPushable %}
-                {% if canUserPush(currentUser, build.application, build.environment) %}
+                {% if canUserPush(getCurrentUser(), build.application, build.environment) %}
                     {% if build.status in ['Waiting', 'Building'] %}
                         {% set canPushSoon = true %}
                     {% elseif build.status in ['Success'] %}
