--- a/templates/denied.twig
+++ b/templates/denied.twig
@@ -2,7 +2,6 @@
 
 {% set page_title = "Access Denied" %}
 {% set html_id = 'error-page' %}
-{% set name = getUsersActualName(currentUser) %}
 
 {# remove nav #}
 {% set showNavigation = false %}
@@ -38,11 +37,11 @@ Please contact an administrator for further details.^1500
 {% endblock %}
 
 {% block denied_message %}
-Greetings, {{ name }}.^1500
+Greetings, Dave.^1500
 
 It seems you have arrived in a section not intended for your usage.^1000 I think you know what the problem is just as well as I do.^1500
 
-{{ name }}?^2000 Are you there?^1500
+Dave?^2000 Are you there?^1500
 
-Just what do you think you're doing, {{ name }}?
+Just what do you think you're doing, Dave?
 {% endblock %}
