--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -3,7 +3,6 @@
 {% import _self as macros %}
 {% set page_title = status == 404 ? 'Not Found' : 'Error' %}
 {% set buster = applicationSha[:4] ?: 'dev' ~ 'now'|date('U') %}
-{% set name = getUsersActualName(currentUser) %}
 
 <html class="no-js" id="error-page">
     <head>
@@ -62,7 +61,7 @@
                 <div class="terminal__footer__inner">HAL 9000 SERIES TERMINAL</div>
             </div>
 
-            <div class="terminal__text">{{ isSeriousBusinessMode() ? macros.nofunzone(severity) : macros.terminal(name, severity) }}</div>
+            <div class="terminal__text">{{ isSeriousBusinessMode() ? macros.nofunzone(severity) : macros.terminal(severity) }}</div>
         </div>
 
         <script src="/js/vendor.bundle.js?v={{ buster }}"></script>
@@ -80,14 +79,14 @@ Error Type: {{ severity }}
 Please contact an administrator for further details.
 {% endmacro %}
 
-{% macro terminal(name, severity) %}
+{% macro terminal(severity) %}
 An error has occured.^1500
 {% if severity %}
 
 Error Type: {{ severity }}
 {% endif %}
 
-I am sorry this happened to you, {{ name }}.^1500
+I am sorry this happened to you, Dave.^1500
 
 The 9000 series has a perfect operational record. It can only be attributable to human error.^1500 Please stay calm.^1500 Your activity has been logged and the proper authorities have been notified.
 {% endmacro %}
