--- a/templates/help/github-permissions.twig
+++ b/templates/help/github-permissions.twig
@@ -4,9 +4,13 @@
 
 {% block content %}
 
-    <h1>Help - <strong>GitHub Permissions</strong></h1>
+    <div class="nav--page">
+        <h1>Help - <strong>GitHub Permissions</strong></h1>
 
-    <p><a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a></p>
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a>
+        </p>
+    </div>
 
     <p>If you are a collaborator on a Github repository, but are unable to build or push the code in HAL 9000, then you may need to make the following changes.</p>
 
