Allow admins to see credential secrets

--- a/templates/admin/credentials/credential.twig
+++ b/templates/admin/credentials/credential.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
+{% import "_partial/macros.twig" as macros %}
 
 {% set page_title = 'Credential : ' ~ credential.name %}
 
 {% set isSuper = isUserSuper(getCurrentUser()) %}
 
 {% block content %}
+
+    {% if decryption_error %}
+        {{ macros.alert('error', 'Unable to decrypt value! Encryption may be misconfigured.') }}
+    {% endif %}
+
     <h1>Credentials - <strong>{{ credential.name }}</strong></h1>
 
     <h3>Name</h3>
@@ -25,7 +31,15 @@
         <p>{{ credential.aws.key }}</p>
 
         <h3>AWS Secret</h3>
-        <p><code>secret</code></p>
+        {% if decryption_error %}
+            <p>Unable to decrypt value. Encryption may be misconfigured.</p>
+
+        {% else %}
+            <p>
+                <code>{{ decrypted }}</code>
+                <br><small>This value is only visible to administrators.</small>
+            </p>
+        {% endif %}
 
     {% elseif credential.type == 'privatekey' %}
 
