--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,6 +82,7 @@
 @import "patterns/split";
 @import "patterns/status";
 @import "patterns/loading-bar";
+@import "patterns/stars";
 
 // must go last!
 @import "app/js";
