--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -44,8 +44,6 @@
             </div>
         </header>
 
-        <div class="error-header"></div>
-
         <div class="terminal">
             <div class="terminal--border">
                 <div class="terminal--border-inner">
@@ -63,6 +61,10 @@
 
             <div class="terminal__text">{{ isSeriousBusinessMode() ? macros.nofunzone(severity) : macros.terminal(severity) }}</div>
         </div>
+
+        <div class="star-1"></div>
+        <div class="star-2"></div>
+        <div class="star-3"></div>
 
         <script src="/js/vendor.bundle.js?v={{ buster }}"></script>
         <script src="/js/app.js?v={{ buster }}"></script>
