Stub out 2.8 release notes

--- a/templates/_partial/help.release-notes.twig
+++ b/templates/_partial/help.release-notes.twig
@@ -18,5 +18,6 @@
             </ul>
         </li>
         <li><a href="/docs/release-notes-2.7.0.html">2.7</a></li>
+        <li><a href="/docs/release-notes-2.8.0.html">2.8</a></li>
     </ul>
 {% endblock %}
